--- a/.travis.yml
+++ b/.travis.yml
@@ -79,7 +79,7 @@ before_install:
   - docker exec -i roborb-soft bash -c "sudo cp rob-orb.list /etc/apt/sources.list.d/"
   - docker exec -i roborb-soft bash -c "rm rob-orb.list"
   - docker exec -i roborb-soft bash -c "sudo apt update"
-  - docker exec -i roborb-soft bash -c "sudo apt install ros-$ROS_DISTRO-base"
+  - docker exec -i roborb-soft bash -c "sudo apt install ros-$ROS_DISTRO-bare"
   - docker exec -i roborb-soft bash -c "source /opt/ros/$ROS_DISTRO/setup.bash"
 
 # Create a catkin workspace with the package under integration.
